changed colors to sort contrast issues

--- a/week03/styles/place.css
+++ b/week03/styles/place.css
@@ -3,7 +3,7 @@
   --main-font: 'Roboto', sans-serif;
   --heading-font: 'Montserrat', sans-serif;
   --bg-color: rgb(209, 229, 227);
-  --accent-color: #c42021ff;
+  --accent-color: rgb(130, 13, 37);
   --border-color: #ccc;
   --card-bg: rgb(19, 124, 72);
   --border-radius: 8px;
